feat: add achievements page and improve media handling

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -209,6 +209,49 @@
     "badgeLocked": "Locked",
     "badgeAwardedAt": "Unlocked on"
   },
+  "achievements": {
+    "title": "My Achievements",
+    "subtitle": "Review the badges you've unlocked and your progress.",
+    "refresh": "Refresh",
+    "loadError": "Failed to load achievements",
+    "summary": {
+      "totalBadges": "Total badges",
+      "totalBadgesHint": "Total number of achievement badges currently available.",
+      "unlocked": "Unlocked",
+      "unlockedHint": "Number of badges you have already earned.",
+      "pointsFromBadges": "Earned {{points}} points",
+      "locked": "Locked",
+      "lockedHint": "Keep completing eco actions to unlock more badges.",
+      "completion": "Completion",
+      "completionHint": "Current badge unlock progress in percent."
+    },
+    "labels": {
+      "unnamedBadge": "Unnamed badge"
+    },
+    "unlocked": {
+      "title": "Unlocked badges",
+      "description": "Great job! You've unlocked these achievement badges.",
+      "empty": "No badges unlocked yet. Complete more eco actions to get started.",
+      "awardedAt": "Unlocked on"
+    },
+    "locked": {
+      "title": "Locked badges",
+      "description": "Complete more environmental actions to unlock these badges.",
+      "empty": "Awesome! You have unlocked every badge.",
+      "requirements": "Requirements"
+    },
+    "timeline": {
+      "title": "Achievement timeline",
+      "description": "Relive each memorable milestone.",
+      "empty": "No achievement records yet—complete some eco actions first."
+    },
+    "monthly": {
+      "description": "New badges and point rewards earned this month."
+    },
+    "leaderboard": {
+      "description": "See the top eco champions in the community."
+    }
+  },
   "activities": {
     "title": "Carbon Reduction Activities",
     "description": "Record your environmental activities and track your carbon footprint reduction",
@@ -757,6 +800,10 @@
       "triggerAuto": "Trigger Auto Grant",
       "newBadge": "New Badge",
       "uploadSuccess": "Icon uploaded",
+      "uploadFailed": "Failed to upload badge icon",
+      "fileTooLarge": "File size must not exceed 5MB",
+      "selectIcon": "Choose image and upload",
+      "uploadHint": "Supported formats: JPG/PNG/WebP, max size 5MB.",
       "fields": {
         "nameZh": "Chinese Name",
         "nameEn": "English Name",
@@ -810,6 +857,10 @@
       "loadFailed": "Unable to load avatars",
       "newAvatar": "New Avatar",
       "uploadSuccess": "Avatar uploaded",
+      "uploadFailed": "Failed to upload avatar",
+      "fileTooLarge": "File size must not exceed 5MB",
+      "selectFile": "Choose image and upload",
+      "uploadHint": "Supported formats: JPG/PNG/WebP, max size 5MB.",
       "fileRequired": "Please upload an avatar image first",
       "updateSuccess": "Avatar updated",
       "createSuccess": "Avatar created",
