feat: 更新用户资料接口，添加用户UUID、积分余额和最近登录时间，优化头像处理逻辑

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -41,15 +41,11 @@
     "email": "Email",
     "password": "Password",
     "confirmPassword": "Confirm Password",
-    "realName": "Real Name",
     "school": "School",
-    "className": "Class",
     "usernamePlaceholder": "Enter username",
     "emailPlaceholder": "Enter email address",
     "passwordPlaceholder": "Enter password",
     "confirmPasswordPlaceholder": "Re-enter password",
-    "realNamePlaceholder": "Enter your real name",
-    "classNamePlaceholder": "Enter class name",
     "selectSchool": "Select a school",
     "schoolPlaceholder": "Enter to create a new school (optional)",
     "newSchoolNote": "You can either select an existing school or enter a new one which will be created on registration.",
@@ -548,7 +544,6 @@
     "username": "Username",
     "email": "Email",
     "school": "School",
-    "className": "Class",
     "location": "Location",
     "joinDate": "Join Date",
     "lastLogin": "Last Login",
@@ -571,6 +566,7 @@
     "avatarUpdateSuccess": "Avatar updated successfully",
     "avatarUpdateFailed": "Failed to update avatar",
     "avatarLoadError": "Failed to load avatars",
+    "editInfoHint": "Need to update your school or other details? Please contact an administrator or complete the onboarding flow again.",
     "form": {
       "personalInfo": "Personal Information",
       "contactInfo": "Contact Information",
@@ -578,8 +574,6 @@
       "preferences": "Preferences",
       "avatar": "Profile Picture",
       "bio": "Bio",
-      "realName": "Real Name",
-      "realNamePlaceholder": "Enter your real name",
       "bioPlaceholder": "Tell us about yourself...",
       "locationPlaceholder": "Enter your location",
       "privacySettings": "Privacy Settings",
