--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -113,15 +113,11 @@
     "email": "邮箱",
     "password": "密码",
     "confirmPassword": "确认密码",
-    "realName": "真实姓名",
     "school": "学校",
-    "className": "班级",
     "usernamePlaceholder": "请输入用户名",
     "emailPlaceholder": "请输入邮箱地址",
     "passwordPlaceholder": "请输入密码",
     "confirmPasswordPlaceholder": "请再次输入密码",
-    "realNamePlaceholder": "请输入真实姓名",
-    "classNamePlaceholder": "请输入班级名称",
     "selectSchool": "请选择学校",
     "schoolPlaceholder": "输入以创建新学校（可选）",
     "newSchoolNote": "可选择已有学校或直接输入新名称，提交注册时自动创建。",
@@ -621,7 +617,6 @@
     "username": "用户名",
     "email": "邮箱",
     "school": "学校",
-    "className": "班级",
     "location": "所在地",
     "joinDate": "加入时间",
     "lastLogin": "最后登录",
@@ -644,6 +639,7 @@
     "avatarUpdateSuccess": "头像更新成功",
     "avatarUpdateFailed": "更新头像失败",
     "avatarLoadError": "加载头像失败",
+    "editInfoHint": "如需修改学校等资料，请联系管理员或重新完成入门流程。",
     "form": {
       "personalInfo": "个人信息",
       "contactInfo": "联系信息",
@@ -651,8 +647,6 @@
       "preferences": "偏好设置",
       "avatar": "头像",
       "bio": "个人简介",
-      "realName": "真实姓名",
-      "realNamePlaceholder": "请输入您的真实姓名",
       "bioPlaceholder": "介绍一下自己...",
       "locationPlaceholder": "请输入您的所在地",
       "privacySettings": "隐私设置",
